# Final-project

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  compose.yml  database-relationships.md  implementation_plan.md  pyproject.toml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02f1e1663b1d_create_messages_table.py  1dc572aa79f8_add_join_codes_table.py  2131e43c0dda_add_cascade_delete_to_messages_project_.py  2a30004e7e71_remove_redundant_admin_id_from_projects_.py  662d65361970_allow_null_uploaded_by_on_documents_set_.py  73feed320b1f_placeholder_for_missing_revision.py  8313cc334848_add_size_bytes_to_documents_and_.py  85ff86a72b0f_merge_heads.py  8a081528d38d_initial_schema.py  8c5d2a4d4bb2_merge_project_membership_heads.py  9f8e7d6c5b4a_drop_project_users_table.py  a1b2c3d4e5f6_convert_membershiprole_to_varchar.py  a71286368b57_add_fk_documents_project_id_cascade.py  d31e780e7725_merge_heads.py  d8e9f0a1b2c3_add_project_membership_table.py  e15ee09c44fb_merge_chat_and_join_codes_heads.py  e1f2a3b4c5d6_project_membership_fk_cascade.py  f2a3b4c5d6e7_add_fk_documents_project_id_cascade_missing.py
backend/src/: main.py
backend/src/core/: cache.py  config.py  database.py  dependencies.py  enums.py  image_keys.py  security.py  storage.py
backend/src/modules/auth/: models.py  router.py  schemas.py  (+2 more)
backend/tests/: conftest.py  test_storage.py
backend/tests/modules/: test_auth.py  test_chat.py  test_documents.py  test_project_membership.py  test_projects.py
(+66 files in other folders)
